src/widgets/styles/qcommonstyle.cpp
@@ -4587,7 +4587,7 @@ int QCommonStyle::pixelMetric(PixelMetric m, const QStyleOption *opt, const QWid
         ret = int(QStyleHelper::dpiScaled(4.));
         break;
     case PM_HeaderMarkSize:
-        ret = int(QStyleHelper::dpiScaled(32.));
+        ret = int(QStyleHelper::dpiScaled(16.));
         break;
     case PM_HeaderGripMargin:
         ret = int(QStyleHelper::dpiScaled(4.));
